Fix scrolling
Fix horizontal scrolling gone, and fix max-height clipping vertical content

--- a/src/App.css
+++ b/src/App.css
@@ -99,7 +99,7 @@ button:hover {
 }
 
 .collapsible-content.open {
-  max-height: 2000px;
+  max-height: none;
   opacity: 1;
   transition:
     max-height 0.7s cubic-bezier(0.4, 0, 0.2, 1),
