--- a/src/components/Table.css
+++ b/src/components/Table.css
@@ -53,8 +53,9 @@ table {
 }
 
 .scrollable-table-wrapper {
-  overflow: auto;
   display: inline-block;
+  overflow-x: auto;
+  overflow-y: visible;
   max-width: 100%;
   box-sizing: border-box;
 }
